--- a/index.html
+++ b/index.html
@@ -3,8 +3,53 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="stylesheet" href="main.css">
 </head>
 <body>
+<nav>
+    <ul>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+    </ul>
+</nav>
+
+<div class="logo-right">
+</div>
+// jesień
+<article>
+    <img class="" src="" alt="">
+    <h1></h1>
+    <p></p>
+</article>
+
+//zima
+<article>
+    <img class="" src="" alt="">
+    <h1></h1>
+    <p></p>
+</article>
+
+//wiosna
+<article>
+    <img class="" src="" alt="">
+    <h1></h1>
+    <p></p>
+</article>
+
+//lato
+<article>
+    <img class="" src="" alt="">
+    <h1></h1>
+    <p></p>
+</article>
+
+<footer>
+    <p>&copy; 2018 Paweł</p>
+</footer>
 
 </body>
 </html>
+
+//validated
