--- a/index.html
+++ b/index.html
@@ -6,44 +6,47 @@
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
-<nav>
-    <ul>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-    </ul>
-</nav>
+    <div class="div-navbar-left"><nav class="navbar-left">
+        <ul>
+            <li><a href="#jesien">Jesień</a></li>
+            <li><a href="#zima">Zima</a></li>
+            <li><a href="#wiosna">Wiosna</a></li>
+            <li><a href="#lato">Lato</a></li>
+        </ul>
+    </nav>
+    </div>
+        <div class="logo-right">
+            <img class="" src="img/logo.png" alt="logo">
+        </div>
+<main class="main">
+    <!--jesień-->
+    <article id="jesien">
+        <img class="img" src="" alt="">
+        <h1></h1>
+        <p></p>
+    </article>
 
-<div class="logo-right">
-</div>
-// jesień
-<article>
-    <img class="" src="" alt="">
-    <h1></h1>
-    <p></p>
-</article>
+    <!--zima-->
+    <article id="zima">
+        <img class="img" src="" alt="">
+        <h1></h1>
+        <p></p>
+    </article>
 
-//zima
-<article>
-    <img class="" src="" alt="">
-    <h1></h1>
-    <p></p>
-</article>
+    <!--wiosna-->
+    <article id="wiosna">
+        <img class="img" src="" alt="">
+        <h1></h1>
+        <p></p>
+    </article>
 
-//wiosna
-<article>
-    <img class="" src="" alt="">
-    <h1></h1>
-    <p></p>
-</article>
-
-//lato
-<article>
-    <img class="" src="" alt="">
-    <h1></h1>
-    <p></p>
-</article>
+    <!--lato-->
+    <article id="lato">
+        <img class="img" src="" alt="">
+        <h1></h1>
+        <p></p>
+    </article>
+</main>
 
 <footer>
     <p>&copy; 2018 Paweł</p>
@@ -52,4 +55,5 @@
 </body>
 </html>
 
-//validated
+<!--
+validated 16.04 20:30-->
