navbar min height,width;

--- a/index.html
+++ b/index.html
@@ -6,18 +6,21 @@
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
-    <div class="div-navbar-left"><nav class="navbar-left">
-        <ul>
-            <li><a href="#jesien">Jesień</a></li>
-            <li><a href="#zima">Zima</a></li>
-            <li><a href="#wiosna">Wiosna</a></li>
-            <li><a href="#lato">Lato</a></li>
-        </ul>
-    </nav>
-    </div>
-        <div class="logo-right">
+    <div class="top-content">
+        <div class="div-navbar-left">
+            <nav class="navbar-left">
+            <ul>
+                <li><a href="#jesien">Jesień</a></li>
+                <li><a href="#zima">Zima</a></li>
+                <li><a href="#wiosna">Wiosna</a></li>
+                <li><a href="#lato">Lato</a></li>
+            </ul>
+        </nav>
+        </div>
+        <div class="div-logo-right">
             <img class="" src="img/logo.png" alt="logo">
         </div>
+    </div>
 <main class="main">
     <!--jesień-->
     <article id="jesien">
