add reset stylesheet

--- a/index.html
+++ b/index.html
@@ -3,52 +3,53 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="stylesheet" href="https://meyerweb.com/eric/tools/css/reset/reset.css">
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
     <div class="top-content">
         <div class="div-navbar-left">
             <nav class="navbar-left">
-            <ul>
-                <li><a href="#jesien">Jesień</a></li>
-                <li><a href="#zima">Zima</a></li>
-                <li><a href="#wiosna">Wiosna</a></li>
-                <li><a href="#lato">Lato</a></li>
-            </ul>
-        </nav>
+                <ul>
+                    <li><a href="#jesien">Jesień</a></li>
+                    <li><a href="#zima">Zima</a></li>
+                    <li><a href="#wiosna">Wiosna</a></li>
+                    <li><a href="#lato">Lato</a></li>
+                </ul>
+            </nav>
         </div>
         <div class="div-logo-right">
             <img class="" src="img/logo.png" alt="logo">
         </div>
     </div>
-<main class="main">
-    <!--jesień-->
-    <article id="jesien">
-        <img class="img" src="" alt="">
-        <h1></h1>
-        <p></p>
-    </article>
+    <main class="main">
+        <!--jesień-->
+        <article id="jesien">
+            <img class="img" src="" alt="">
+            <h1></h1>
+            <p></p>
+        </article>
 
-    <!--zima-->
-    <article id="zima">
-        <img class="img" src="" alt="">
-        <h1></h1>
-        <p></p>
-    </article>
+        <!--zima-->
+        <article id="zima">
+            <img class="img" src="" alt="">
+            <h1></h1>
+            <p></p>
+        </article>
 
-    <!--wiosna-->
-    <article id="wiosna">
-        <img class="img" src="" alt="">
-        <h1></h1>
-        <p></p>
-    </article>
+        <!--wiosna-->
+        <article id="wiosna">
+            <img class="img" src="" alt="">
+            <h1></h1>
+            <p></p>
+        </article>
 
-    <!--lato-->
-    <article id="lato">
-        <img class="img" src="" alt="">
-        <h1></h1>
-        <p></p>
-    </article>
+        <!--lato-->
+        <article id="lato">
+            <img class="img" src="" alt="">
+            <h1></h1>
+            <p></p>
+        </article>
 </main>
 
 <footer>
