--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             </nav>
         </div>
         <div class="div-logo-right">
-            <img class="" src="img/logo.png" alt="logo">
+            <a href="#top"><img class="" src="img/logo.png" alt="logo"></a>
         </div>
     </div>
     <main class="main">
